Fix how images look on mobile

--- a/src/styles/list/ListItemCompact.module.scss
+++ b/src/styles/list/ListItemCompact.module.scss
@@ -9,6 +9,7 @@ $bottomMargin: 1rem;
   justify-content: space-between;
   background-color: $backgroundColor;
   border-radius: 0.2rem;
+  border-left: solid #e5dfd4 3.9px;
 
   // border-top: solid rgb(220, 214, 192) 0.1rem;
   
